# claim_process

./: .env.example  Dockerfile  Makefile  README.md  config.py  db.py  docker-compose.yml  main.py  publisher.py  pyproject.toml  requirements.txt  subscriber.py
http/: claims.http
src/: models.py  schemas.py
src/api/: router.py
src/api/v1/: calculator.py  claim.py  claim_process.py  providers.py
